infra/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dpl
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: beslisboom
    spec:
      automountServiceAccountToken: false
      containers:
        - image: ghcr.io/minbzk/beslisboom:main
          name: beslisboom
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 200m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 64Mi
      imagePullSecrets:
        - name: minbzk-registry
